# LAWIM_V2

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_MIGRATION_LAWIM_V2.md  BETA_DISTRIBUTION_GUIDE.md  BETA_READINESS_CHECKLIST.md  BETA_TESTER_FEEDBACK_TEMPLATE.md  CHANGELOG_BETA_1.0.0.md  DRF_IMPLEMENTATION_PLAN.md  Dockerfile  LAWIM_CONTEXT.md  LAWIM_V2_ DIRECTOR_ OPERATING_ SYSTEM .md  LAWIM_V2_BOOTSTRAP_REPORT.md  RAPPORT_PATRIMOINE_METIER_LAWIM.md  RC_READINESS_CHECKLIST.md  README.md  RELEASE_MANIFEST.json  RELEASE_NOTES_BETA.md  RELEASE_NOTES_RC_1.0.0.md  diagnostic_disque.txt  diagnostic_lawim.txt  diagnostic_nettoyage.txt  evidence_extraction_summary.md  lawim_program_status.yaml  opencode.json  package-lock.json  package.json  pyproject.toml  requirements-postgresql.txt  requirements.txt  sitecustomize.py
.github/: copilot-instructions.md
.lawim/: AIOS-MANIFEST.md  BASELINE-v1.md  CHANGELOG.md  README.md  VERSION
.opencode/: AGENTS.md
OPS/: README.md
code/: README.md
compose/: README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
data/: README.md
demo/: generate_reference.py
deployment/: .env.development  .env.example  .env.production  .env.staging
docker/: Dockerfile.base  README.md
docs/: AAC_B_MEDIA_REGISTRY.md  AAC_C_MIGRATION_READINESS.md  AAD_ARCHITECTURE.md  AAD_AUTHENTICATION.md  AAD_CONFIGURATION.md  AAD_SECURITY.md  AAD_SEQUENCE.md  AAD_TESTING.md  ACCEPTANCE.md  ADVANCED_DIGITAL_TWIN.md  AUTONOMOUS_WORKFLOW_PREVIEW.md  AUTONOMY_GOVERNANCE.md  BACKUP_CENTER.md  BRAIN.md  (+123 more)
(+2814 files in other folders)
